add links to booking form

--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
             <h1 class="text-shadow">Improve workflow <br> of your entire <br> facility. </h1>
             <p class="mb-5 text-shadow">Using a warehouse to manage orders improves <br>the workflow of your entire facility.... <a href="/"
                 target="_blank">store.com</a> </p>
-            <p><a href="units/book/" target="_blank" class="btn btn-primary btn-sm">Get Started</a></p>
+            <p><a href="units/book/" target="_blank" class="btn btn-primary btn-sm">Get Started..</a></p>
 
           </div>
         </div>
