make few changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
             <h1 class="text-shadow">Improve workflow <br> of your entire <br> facility. </h1>
             <p class="mb-5 text-shadow">Using a warehouse to manage orders improves <br>the workflow of your entire facility.... <a href="/"
                 target="_blank">store.com</a> </p>
-            <p><a href="units/book/" target="_blank" class="btn btn-primary btn-sm">Get Started..</a></p>
+            <p><a href="units/book/" target="_blank" class="btn btn-primary btn-sm">Get Started</a></p>
 
           </div>
         </div>
@@ -60,7 +60,7 @@
             <h1 class="text-shadow">Faster shipping<br> and <br> delivery </h1>
             <p class="mb-5 text-shadow">Packing your products up in the same warehouse they<br> were received in allows shipping to effortlessly handle their part... <a href="/"
                 target="_blank">store.com</a> </p>
-            <p><a href="units/book/" target="_blank" class="btn btn-primary btn-sm">Get Started..</a></p>
+            <p><a href="units/book/" target="_blank" class="btn btn-primary btn-sm">Get Started</a></p>
 
           </div>
         </div>
@@ -80,7 +80,7 @@
             <h1 class="text-shadow">Task <br>  Delegation <br> </h1>
             <p class="mb-5 text-shadow">By warehousing your products, you delegate the <br>former responsibilities to staff members.... <a href="/"
                 target="_blank">store.com</a> </p>
-            <p><a href="units/book/" target="_blank" class="btn btn-primary btn-sm">Get Started..</a></p>
+            <p><a href="units/book/" target="_blank" class="btn btn-primary btn-sm">Get Started</a></p>
 
           </div>
         </div>
@@ -100,7 +100,7 @@
             <h1 class="text-shadow">Close to  <br>target <br>market . </h1>
             <p class="mb-5 text-shadow">This supports fast shipping and easy returns--<br>two factors that customers have high standards for.... <a href="/"
                 target="_blank">store.com</a> </p>
-            <p><a href="units/book/" target="_blank" class="btn btn-primary btn-sm">Get Started..</a></p>
+            <p><a href="units/book/" target="_blank" class="btn btn-primary btn-sm">Get Started</a></p>
 
           </div>
         </div>
@@ -120,7 +120,7 @@
             <h1 class="text-shadow">Control <br> over <br>products . </h1>
             <p class="mb-5 text-shadow">Keeping all of your product stock in a warehouse<br> allows you to maintain control over it... <a href="/"
                 target="_blank">store.com</a> </p>
-            <p><a href="units/book/" target="_blank" class="btn btn-primary btn-sm">Get Started..</a></p>
+            <p><a href="units/book/" target="_blank" class="btn btn-primary btn-sm">Get Started</a></p>
 
           </div>
         </div>
