--- a/templates/request_transport.html
+++ b/templates/request_transport.html
@@ -37,7 +37,11 @@
                         <h5 class="card-title">Would you Like to Request Transport Services?</h5>
                         <button type="button" class="btn btn-primary card-link"
                             onclick="transportFunction()">YES</button>
+                        {%if initial_units < final_units %}
+                        <a href="{%url 'index'%}" class="card-link btn btn-outline-danger">NO</a>   
+                        {%else%}
                         <a href="{%url 'payment'%}" class="card-link btn btn-outline-danger">NO</a>
+                        {%endif%}
                     </div>
                 </div>
             </div>
