remove staff registration url

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -44,7 +44,7 @@
                 {% if user.is_authenticated %}
                 {% else %}
                 <a style="border-radius: 50px;" class="text-dark dropdown-item" href="/client_register/">As Client</a>
-                <a style="border-radius: 50px;" class="text-dark dropdown-item" href="/staff_register/">As Staff</a>
+                <!-- <a style="border-radius: 50px;" class="text-dark dropdown-item" href="/staff_register/">As Staff</a> -->
                 {% endif %}
               </div>
             </li>
